--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -20,9 +20,15 @@
 				<%= link_to "Editar", edit_todo_path(todo), class: "btn btn-default" %>
 				<%= link_to "Borrar", todo, method: :delete, class: "btn btn-default" %>
 			</div>
-			<div class="col-md-2">
-				<%= link_to "Completado", complete_todo_path(todo), class: "btn btn-success" %>
-			</div>
+			<% if !todo.completed %>
+				<div class="col-md-2">
+					<%= link_to "Completado", complete_todo_path(todo), class: "btn btn-warning" %>
+				</div>
+			<% else %>
+				<div class="col-md-2">
+					<%= link_to "Completado", complete_todo_path(todo), class: "btn btn-success disabled" %>
+				</div>
+			<%end%>
 		</div>
 	</div>
 <% end %>
