--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -1,16 +1,19 @@
-<div class="well">
-	<h3>ToDo <%= @todo.id%></h3>
-	<div class="row">
-		<div class="col-md-2">
-			<p>Descripcion:</p>
-			<p>Completo:</p>
-		</div>
-		<div class="col-md-3">
-			<p><%= @todo.description %></p>
-			<p><%= @todo.completed %></p>
-		</div>
+<div class="col-md-8">
+	<div class="well">
+		<div class="row">
+			<div class="col-md-4">
+				<h3><%= @todo.description%></h3>
+			</div>
+			<div class="col-md-1">
+				<br>
+				<br>
+				<div class="form-check">
+					  <input class="form-check-input" type="checkbox" value="" id="defaultCheck2" <%= "checked" if @todo.completed %> disabled>
+				</div>
+			</div>
 
+		</div>
+		
 	</div>
+	<%= link_to "Volver", todos_path, class: "btn btn-default" %>
 </div>
-
-<%= link_to "Volver", todos_path %>
